// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Visio export — golden structural snapshots > expanded subprocess with internals 1`] = `
{
  "byId": [
    {
      "geom": {
        "h": 2.4,
        "w": 8.35,
        "x": 5.85,
        "y": 4.14,
      },
      "id": "_default_pool",
      "master": "1000",
      "nameU": "Company",
      "type": "pool",
    },
    {
      "geom": {
        "h": 0,
        "w": 0.73,
        "x": 4.76,
        "y": 3.87,
      },
      "id": "conn-is-it",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": 0,
        "w": 0.73,
        "x": 6.55,
        "y": 3.87,
      },
      "id": "conn-it-ien",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": -0.4,
        "w": 0.73,
        "x": 3.35,
        "y": 4.1,
      },
      "id": "conn-s-sp",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": 0,
        "w": 1.52,
        "x": 8.37,
        "y": 3.9,
      },
      "id": "conn-sp-e",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": null,
        "w": null,
        "x": 9.31,
        "y": 3.9,
      },
      "id": "e",
      "master": "1003",
      "nameU": "End",
      "type": "end-event",
    },
    {
      "geom": {
        "h": null,
        "w": null,
        "x": 7.11,
        "y": 3.87,
      },
      "id": "ien",
      "master": "1006",
      "nameU": "end-event",
      "type": "end-event",
    },
    {
      "geom": {
        "h": null,
        "w": null,
        "x": 4.21,
        "y": 3.87,
      },
      "id": "is",
      "master": "1004",
      "nameU": "start-event",
      "type": "start-event",
    },
    {
      "geom": {
        "h": 0.68,
        "w": 1.06,
        "x": 5.66,
        "y": 3.87,
      },
      "id": "it",
      "master": "1005",
      "nameU": "Assess",
      "type": "task",
    },
    {
      "geom": {
        "h": null,
        "w": null,
        "x": 2.79,
        "y": 4.29,
      },
      "id": "s",
      "master": "1001",
      "nameU": "Start",
      "type": "start-event",
    },
    {
      "geom": {
        "h": 1.36,
        "w": 3.9,
        "x": 5.66,
        "y": 3.9,
      },
      "id": "sp",
      "master": "1002",
      "nameU": "Handle claim",
      "type": "subprocess-expanded",
    },
  ],
  "summary": {
    "masters": [
      "1000",
      "1001",
      "1002",
      "1003",
      "1004",
      "1005",
      "1006",
      "111",
    ],
    "subShapes": 92,
    "taggedShapes": 11,
    "totalShapes": 103,
  },
}
`;

exports[`Visio export — golden structural snapshots > linear flow 1`] = `
{
  "byId": [
    {
      "geom": {
        "h": 2.08,
        "w": 6.31,
        "x": 5.85,
        "y": 4.14,
      },
      "id": "_default_pool",
      "master": "1000",
      "nameU": "Company",
      "type": "pool",
    },
    {
      "geom": {
        "h": 0,
        "w": 0.73,
        "x": 4.37,
        "y": 4.14,
      },
      "id": "conn-s-t1",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": 0,
        "w": 0.63,
        "x": 6.11,
        "y": 4.14,
      },
      "id": "conn-t1-t2",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": 0,
        "w": 0.63,
        "x": 7.79,
        "y": 4.14,
      },
      "id": "conn-t2-e",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": null,
        "w": null,
        "x": 8.29,
        "y": 4.14,
      },
      "id": "e",
      "master": "1004",
      "nameU": "Done",
      "type": "end-event",
    },
    {
      "geom": {
        "h": null,
        "w": null,
        "x": 3.81,
        "y": 4.14,
      },
      "id": "s",
      "master": "1001",
      "nameU": "Start",
      "type": "start-event",
    },
    {
      "geom": {
        "h": 0.68,
        "w": 1.06,
        "x": 5.26,
        "y": 4.14,
      },
      "id": "t1",
      "master": "1002",
      "nameU": "Receive order",
      "type": "task",
    },
    {
      "geom": {
        "h": 0.68,
        "w": 1.06,
        "x": 6.95,
        "y": 4.14,
      },
      "id": "t2",
      "master": "1003",
      "nameU": "Ship order",
      "type": "task",
    },
  ],
  "summary": {
    "masters": [
      "1000",
      "1001",
      "1002",
      "1003",
      "1004",
      "111",
    ],
    "subShapes": 68,
    "taggedShapes": 8,
    "totalShapes": 76,
  },
}
`;

exports[`Visio export — golden structural snapshots > pool with two lanes 1`] = `
{
  "byId": [
    {
      "geom": {
        "h": 0,
        "w": 0.73,
        "x": 4.46,
        "y": 5.15,
      },
      "id": "conn-s-t1",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": -2.03,
        "w": 0.63,
        "x": 6.2,
        "y": 4.14,
      },
      "id": "conn-t1-t2",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": 0,
        "w": 0.63,
        "x": 7.89,
        "y": 3.12,
      },
      "id": "conn-t2-e",
      "master": "111",
      "nameU": "sequence",
      "type": "connector",
    },
    {
      "geom": {
        "h": null,
        "w": null,
        "x": 8.39,
        "y": 3.12,
      },
      "id": "e",
      "master": "1006",
      "nameU": "End",
      "type": "end-event",
    },
    {
      "geom": {
        "h": 2.03,
        "w": 6.13,
        "x": 6.03,
        "y": 5.15,
      },
      "id": "l1",
      "master": "1001",
      "nameU": "Sales",
      "type": "lane",
    },
    {
      "geom": {
        "h": 2.03,
        "w": 6.13,
        "x": 6.03,
        "y": 3.12,
      },
      "id": "l2",
      "master": "1004",
      "nameU": "Warehouse",
      "type": "lane",
    },
    {
      "geom": {
        "h": 4.06,
        "w": 6.5,
        "x": 5.85,
        "y": 4.14,
      },
      "id": "p",
      "master": "1000",
      "nameU": "Order Process",
      "type": "pool",
    },
    {
      "geom": {
        "h": null,
        "w": null,
        "x": 3.91,
        "y": 5.15,
      },
      "id": "s",
      "master": "1002",
      "nameU": "Start",
      "type": "start-event",
    },
    {
      "geom": {
        "h": 0.68,
        "w": 1.06,
        "x": 5.36,
        "y": 5.15,
      },
      "id": "t1",
      "master": "1003",
      "nameU": "Take order",
      "type": "task",
    },
    {
      "geom": {
        "h": 0.68,
        "w": 1.06,
        "x": 7.04,
        "y": 3.12,
      },
      "id": "t2",
      "master": "1005",
      "nameU": "Pick goods",
      "type": "task",
    },
  ],
  "summary": {
    "masters": [
      "1000",
      "1001",
      "1002",
      "1003",
      "1004",
      "1005",
      "1006",
      "111",
    ],
    "subShapes": 68,
    "taggedShapes": 10,
    "totalShapes": 78,
  },
}
`;
